[springboot/graphql] update demo